# stikl

./: .gitignore  CLAUDE.md  taskfile.yml
.claude/hooks/: session-start.sh
.github/workflows/: app-docker.yml  ci.yml  publish-app-image.yml
api/: Containerfile  stikling_api.sln  taskfile.yml
api/Stikl.Domain.Test/: Stikl.Domain.Test.fsproj
api/Stikl.Web/: Stikl.Web.fsproj
api/api/: Composition.fs  CurrentUser.fs  Dto.fs  Task.fs  api.fsproj  api.sln  stikling_api.sln  taskfile.yml
api/api.test/: Arbitrary.fs  Event.fs  Http.fs  Plant.fs  User.fs
api/domain/: Library.fs
api/domain.test/: Tests.fs  domain.test.fsproj
api/sql/: create_schema.sql
api/webapp/: Auth0.fs  Components.fs  Composition.fs  Htmx.fs  Identity.fs  Option.fs  Page.fs  PageBuilder.fs  Principal.fs  Program.fs  Result.fs  Router.fs  Services.fs  String.fs  Task.fs  TaskSeq.fs  User.fs  ValueTask.fs  appsettings.Development.json  webapp.fsproj
app/: Containerfile  Stikl.sln  Stikl.slnx  taskfile.yml
app/Stikl.Domain/: Chat.fs  Library.fs  Stikl.Domain.fsproj
app/Stikl.Domain.Test/: Tests.fs
app/Stikl.Tests/: ChatIdTests.cs  EmailTests.cs  EventPayloadRegistrationTests.cs  FakeHttpMessageHandler.cs  HasPlantTests.cs  SpeciesIdTests.cs  (+8 more)
infra/: .gitignore  app.nix  loki-config.yaml  main.nix  promtail-config.yaml  root.nix  taskfile.yml  telemetry.nix
stikling-api/: Cargo.toml
stikling-api/src/: main.rs
stikling-api/src/api/: router.rs
stikling-api/src/domain/: mod.rs  plant.rs
webapp/: moss-theme.ts  package-lock.json  package.json  tailwind.config.ts  taskfile.yml
(+274 files in other folders)
