[package]
name = "stikling-api"
version = "0.1.0"
edition = "2021"

[dependencies]
readonly = "0.2.12"
quickcheck =  "1.0.3"
quickcheck_macros = "1.0.0"

axum = "0.7.5"
serde = { version="1.0.205", features=["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }